@@ -7,6 +7,7 @@
 #include "Layer.h"
 #include "Decoration.h"
 #include "KeyPoint.h"
+#include "Project.h"
 
 namespace sm {
 
@@ -30,9 +31,44 @@ class Selection {
     array_type currentSelection;
     friend class SelectionManager;
 
+    int64_t nextId = 0;
+    std::shared_ptr<model::Project> proj;
+
+    void unrollSelection(const std::vector<int64_t> &selection);
+
+    // remove null objects
+    void sanitize() {
+        auto it = currentSelection.begin();
+        while (it != currentSelection.end()) {
+            if (*it == nullptr) {
+                it = currentSelection.erase(it);
+            } else {
+                it++;
+            }
+        }
+    }
+
+    void syncSelection(const std::vector<int64_t> &selection, const std::shared_ptr<T> &item) {
+        int64_t id = item->id;
+        if (id >= 0) {
+            size_t i = 0;
+            for (int64_t it : selection) {
+                if (it == id) {
+                    item->isSelected = true;
+                    currentSelection[i] = item;
+                }
+                i++;
+            }
+        }
+    }
+
 public:
     Selection(const Selection &) = delete;  // non construction-copyable
     Selection &operator=(const Selection &) = delete;  // non copyable
+
+    void init(std::shared_ptr<model::Project> _proj) {
+        proj = std::move(_proj);
+    }
 
     void set(std::shared_ptr<T> item) {
         assert(item);
@@ -74,6 +110,9 @@ public:
         return false;
     }
 
+    /**
+     * Remove all items from selection
+     */
     inline void reset() {
         for (auto &it : currentSelection) {
             it->isSelected = false;
@@ -105,6 +144,25 @@ public:
     inline const_iterator end() const noexcept { return currentSelection.cend(); }
 
     void setLastSelection();
+
+    SERIALIZATION_START {
+        std::vector<int64_t> selection;
+        if (ser.SERIALIZING) {
+            for (auto &it : currentSelection) {
+                int64_t &id = it->id;
+                if (id < 0) {
+                    id = nextId++;
+                }
+                selection.push_back(id);
+            }
+        }
+        ser.serialize("selection", selection);
+        if (ser.DESERIALIZING) {
+            reset();
+            unrollSelection(selection);
+        }
+    };
+    std::map<int64_t, size_t> buildMap(const std::vector<int64_t> &selection) const;
 };
 
 class SelectionManager {
@@ -114,10 +172,27 @@ public:
               decorations(this, DECORATION),
               keypoints(this, KEYPOINT) {};
 
-    SELECTION_TYPE lastSelection;
+    SELECTION_TYPE lastSelection = NOTHING;
     Selection<model::Layer> layers;
     Selection<model::Decoration> decorations;
     Selection<model::KeyPoint> keypoints;
+
+    void reset() {
+        layers.reset();
+        decorations.reset();
+        keypoints.reset();
+    }
+
+    void init(std::shared_ptr<model::Project> proj);
+
+    SERIALIZATION_START {
+        ser.serializeEnum("lastSelection", lastSelection);
+        ser.serialize("layers", layers);
+        ser.serialize("decorations", decorations);
+        ser.serialize("keypoints", keypoints);
+    };
+
+    std::shared_ptr<model::Project> proj;
 };
 
 template<typename T>
