@@ -1,0 +1,4 @@
+#include "SelectableItem.h"
+
+using namespace sm;
+using namespace sm::model;
