@@ -4,6 +4,7 @@ TODO:
   - Multi canvas project
   - Multi document window
   - Replace ffmpeg with a better media loader
+  - [minor] serialize path
 
 SNAPSHOT:
   - Changed output namespace from CLS to lsm
